<!--
  ~ Copyright 2016. SHENQINCI(沈钦赐)<dev@qinc.me>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">MarkdownEditors</string>
    <!--webViewActivity相关菜单-->
    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_clear_cache">清理缓存和历史</string>
    <string name="action_clear_cookie">清理cookie</string>
    <string name="action_share">分享</string>

    <string name="menu_web_horizontal">横屏显示</string>
    <string name="menu_web_vertical">竖屏显示</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Description">Description</string>
    <string name="MainFileManagerNoPost">没有文章</string>
    <string name="MainFileManagerCreateHint">您可以点击右下角按钮创建新的文章</string>
    <string name="action_create_file">创建文章</string>
    <string name="create_folder">新建文件夹</string>
    <string name="file">文章</string>
    <string name="sure">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_search">搜索文章</string>
    <string name="please_enter">请输入</string>
    <string name="xxxx" translatable="false">xxxx</string>

    <string name="action_paste">粘贴</string>
    <string name="action_copy">复制</string>
    <string name="action_cut">剪切</string>
    <string name="action_delete">删除</string>
    <string name="action_rename">重命名</string>

    <string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_save">保存</string>
    <string name="action_other_operate">其他操作</string>
    <string name="action_helper">语法参考</string>
    <string name="action_preview">预览</string>
    <string name="action_edit">编辑</string>
    <string name="action_setting">设置</string>
    <string name="about">关于</string>

    <string name="copy_right" translatable="false">Copyrights © 2016</string>
    <string name="version_string" translatable="false">Version %s</string>
    <string name="contact_me">联系我们</string>
    <string name="connect_with_us">与我们联系</string>
    <string name="advertise_with_us">广告联系</string>

    <string name="share_copy_text">复制为文本</string>
    <string name="share_text">分享为文本</string>
    <string name="share_md">分享为MD文件(.md)</string>
    <string name="share_html">分享为HTML文本(.html)</string>
    <string name="share_png">分享为图片(.png)</string>
</resources>
