<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_copy"/>
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_action_cut"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_cut"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_rename"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_delete"/>
</menu>
