<!--
  ~ Copyright 2016. SHENQINCI(沈钦赐)<dev@qinc.me>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".view.EditorActivity">
    <item
        android:id="@+id/action_other_operate"
        android:orderInCategory="83"
        android:title="@string/action_other_operate"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="82"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share_menu"
        android:orderInCategory="84"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_helper"
        android:icon="@drawable/ic_help_menu"
        android:orderInCategory="85"
        android:title="@string/action_helper"
        app:showAsAction="never"/>


    <!--<item-->
        <!--android:id="@+id/action_setting"-->
        <!--android:icon="@drawable/ic_settings_menu"-->
        <!--android:orderInCategory="87"-->
        <!--android:title="@string/action_setting"-->
        <!--app:showAsAction="never"/>-->
</menu>